# ProjectsHttpServer

./: .gitignore  CMakeLists.txt  conanfile.py
src/: main.cpp
src/server/: triehttprouter.cpp  triehttprouter.h  variantvalue.cpp  variantvalue.h
